--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Firza</p>
+              <p>Firza imut</p>
             </div>
             <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
           </div>
